app/assets/stylesheets/components/_navbar.scss
// ------------- Classes -------------

.about-us {
  &:hover {
    text-decoration: underline !important;
  }
}

.about-us-container {
  font-size: clamp(14px, calc(1vw + 6px), 18px);
  font-weight: normal;
  min-width: 70px;
}

@media only screen and (max-width: 576px) {
  .about-us-container {
    display: none;
  }
}

.logo-container {
  width: 18%;
}

.nav-button-margin {
  margin-right: 0.01em;
}

.navbar-collapse {
  flex-basis: 100%;
  flex-grow: 0;
  align-items: center;
}

.navbar-main {
  justify-content: space-between;
  padding-top: 12px;
  padding-bottom: 4px;
  position: fixed;

  @media (max-width: 428px) {
    position: absolute;
  }

  @media (orientation: landscape) and (max-height: 428px) {
    position: absolute;

  }

  top: 0;
  width: 100vw;
  z-index: 500;
}

.navbar-nav {
  flex-direction: row;
}

.navbar-colored {
  background: $green;
}


.test-navbar-scroll {
  color: $text-light;
  font-size: 18px;
}

.sign-up-button-margin {
  margin-right: 1em;

  @media (max-width: 600px) {
    margin-right: 0.05em;
  }
}

// ------------- IDs -------------

#logo {
  width: clamp(180px, 100%, 240px);
}

@media only screen and (max-width: 500px) {
  #logo {
    width: 110px;
  }
}

@media only screen and (orientation: landscape) and (max-width: 768px) {
  #logo {
    width: 160px;
  }
}

#name-user-onscroll {
  color: $text-light !important;
  width: 51px;

  &:hover {
    color: white !important;
  }
}

